--- a/src/mongo/db/modules/enterprise/src/ldap/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/ldap/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")
+load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library", "mongo_cc_unit_test")
 
 package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])
 
@@ -257,5 +257,34 @@ mongo_cc_library(
         "//src/mongo/db/auth:auth_impl_internal",
         "//src/mongo/db/auth:authserver",
         "//src/mongo/util:background_job",
+    ],
+)
+
+mongo_cc_unit_test(
+    name = "enterprise_ldap_test",
+    srcs = [
+        "ldap_connection_options_test.cpp",
+        "ldap_health_observer_test.cpp",
+        "ldap_query_test.cpp",
+        "ldap_runner_mock.h",
+        "//src/mongo/db/modules/enterprise/src/ldap/name_mapping:rewrite_rule_test.cpp",
+    ],
+    tags = ["mongo_unittest_first_group"],
+    target_compatible_with = select({
+        "@platforms//os:macos": ["@platforms//:incompatible"],
+        "//conditions:default": [],
+    }),
+    deps = [
+        ":ldap_health_observer",
+        ":ldap_manager_impl",
+        ":ldap_name_map",
+        ":ldap_query",
+        "//src/mongo/db:service_context",
+        "//src/mongo/db/auth",
+        "//src/mongo/db/process_health:fault_manager_test_suite",
+        "//src/mongo/executor:task_executor_test_fixture",
+        "//src/mongo/executor:thread_pool_task_executor_test_fixture",
+        "//src/mongo/idl:server_parameter_test_util",
+        "//src/mongo/util:clock_source_mock",
     ],
 )
