--- a/src/mongo/db/modules/enterprise/src/sasl/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/sasl/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")
+load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library", "mongo_cc_unit_test")
 
 package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])
 
@@ -176,7 +176,7 @@ mongo_cc_library(
         "//src/mongo/db/modules/enterprise/src/ldap:mongo_ldap",
         "//src/mongo/util:background_job",
     ] + select({
-        "//bazel/config:ssl_provider_openssl": [":sasl_oidc_server"],
+        "//bazel/config:mongo_crypto_openssl": [":sasl_oidc_server"],
         "//conditions:default": [],
     }),
 )
@@ -202,7 +202,7 @@ mongo_cc_library(
         "//src/mongo/crypto:jwks_fetcher_factory.h",
     ],
     target_compatible_with = select({
-        "//bazel/config:ssl_provider_openssl": [],
+        "//bazel/config:mongo_crypto_openssl": [],
         "//conditions:default": ["@platforms//:incompatible"],
     }),
     deps = [
@@ -218,5 +218,73 @@ mongo_cc_library(
         "//src/mongo/db/commands:test_commands_enabled",
         "//src/mongo/util:background_job",
         "//src/mongo/util:pcre_wrapper",
+    ],
+)
+
+mongo_cc_unit_test(
+    name = "sasl_oidc_server_test",
+    srcs = [
+        "idp_manager_test.cpp",
+        "oidc_core_options_stub.cpp",
+        "//src/mongo/crypto:jwks_fetcher_mock.h",
+    ],
+    tags = ["mongo_unittest_first_group"],
+    target_compatible_with = select({
+        "//bazel/config:mongo_crypto_openssl": [],
+        "//conditions:default": ["@platforms//:incompatible"],
+    }),
+    deps = [
+        ":sasl_oidc_server",
+        "//src/mongo/crypto:jwt",
+        "//src/mongo/db:server_base",
+        "//src/mongo/db:server_feature_flags",
+        "//src/mongo/idl:server_parameter_test_util",
+        "//src/mongo/util:clock_source_mock",
+    ],
+)
+
+mongo_cc_unit_test(
+    name = "sasl_aws_protocol_test",
+    srcs = [
+        "sasl_aws_protocol_test.cpp",
+    ],
+    tags = ["mongo_unittest_third_group"],
+    deps = [
+        ":sasl_aws_server",
+        "//src/mongo/client:sasl_aws_client",
+        "//src/mongo/client:sasl_aws_common",
+        "//src/mongo/db/auth:sasl_options",
+        "//src/third_party/libmongocrypt:mongocrypt",
+    ],
+)
+
+mongo_cc_unit_test(
+    name = "sasl_authentication_session_gssapi_test",
+    srcs = [
+        "sasl_authentication_session_gssapi_test.cpp",
+    ],
+    has_custom_mainline = True,
+    tags = ["mongo_unittest_fourth_group"],
+    target_compatible_with = select({
+        "@platforms//os:windows": ["@platforms//:incompatible"],
+        "//conditions:default": [],
+    }),
+    deps = [
+        ":mongosaslservercommon",
+        ":mongosaslserversession",
+        "//src/mongo:base",
+        "//src/mongo/client:clientdriver_network",
+        "//src/mongo/client:cyrus_sasl_client",
+        "//src/mongo/db:service_context_non_d",
+        "//src/mongo/db:service_context_test_fixture",
+        "//src/mongo/db/auth",
+        "//src/mongo/db/auth:authmocks",
+        "//src/mongo/db/auth:saslauth",
+        "//src/mongo/db/modules/enterprise/src/ldap:ldap_manager_init",
+        "//src/mongo/executor:network_interface_factory",
+        "//src/mongo/executor:network_interface_thread_pool",
+        "//src/mongo/executor:thread_pool_task_executor",
+        "//src/mongo/unittest",
+        "//src/mongo/util/net:network",
     ],
 )
