SERVER-95033: externalAPI response result error handling (#28688)
Summary:

- Added error handling during processing of docs, including configurable
error handling in the event of an error response
-  Creation of `onError` type
- `HttpMethod` is now a common IDL type
- Added support for writing to _stream_meta and related testing

--- a/src/mongo/db/modules/enterprise/src/streams/exec/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/streams/exec/BUILD.bazel
@@ -26,6 +26,7 @@ idl_generator(
     name = "stages_gen",
     src = "stages.idl",
     deps = [
+        ":common_gen",
         "//src/mongo/db:basic_types_gen",
         "//src/mongo/db/pipeline:document_source_change_stream_gen",
         "//src/mongo/db/pipeline:document_source_merge_gen",
@@ -38,6 +39,7 @@ idl_generator(
     name = "exec_internal_gen",
     src = "exec_internal.idl",
     deps = [
+        ":common_gen",
         "//src/mongo/db:basic_types_gen",
         "//src/mongo/db/pipeline:value_gen",
     ],
