SERVER-95034: support inner pipelines for custom https payloads (#29047)

--- a/src/mongo/db/modules/enterprise/src/streams/exec/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/streams/exec/BUILD.bazel
@@ -249,6 +249,7 @@ mongo_cc_library(
         "external_api_operator.h",
         "fake_kafka_partition_consumer.h",
         "feature_flag.h",
+        "feedable_pipeline.h",
         "generated_data_source_operator.h",
         "group_operator.h",
         "group_processor.h",
