--- a/src/mongo/db/modules/enterprise/src/fle/query_analysis/SConscript
+++ b/src/mongo/db/modules/enterprise/src/fle/query_analysis/SConscript
@@ -6,22 +6,6 @@ env = env.Clone()
 
 env.CppUnitTest(
     target="enterprise_fle_query_analysis_test",
-    source=[
-        "aggregate_expression_intender_range_test.cpp",
-        "aggregate_expression_intender_test.cpp",
-        "encryption_schema_tree_test.cpp",
-        "expression_analysis_test.cpp",
-        "fle2_test_fixture.cpp",
-        "fle_match_expression_test.cpp",
-        "fle_pipeline_test.cpp",
-        "fle_test_fixture.cpp",
-        "query_analysis_test.cpp",
-    ],
-    LIBDEPS=[
-        "$BUILD_DIR/mongo/db/auth/authmocks",
-        "$BUILD_DIR/mongo/db/query/query_test_service_context",
-        "$BUILD_DIR/mongo/db/service_context_non_d",
-        "$BUILD_DIR/mongo/db/service_context_test_fixture",
-        "query_analysis",
-    ],
+    source=[],
+    LIBDEPS=[],
 )
