--- a/src/mongo/db/modules/enterprise/src/fips/SConscript
+++ b/src/mongo/db/modules/enterprise/src/fips/SConscript
@@ -1,24 +1,10 @@
 # -*- mode: python -*-
 
-Import(
-    [
-        "env",
-        "get_option",
-    ]
-)
+Import("env")
 
 env = env.Clone()
-
 env.CppUnitTest(
     target="fips_options_test",
-    source=[
-        "fips_options_test.cpp",
-    ],
-    LIBDEPS=[
-        "$BUILD_DIR/mongo/db/concurrency/lock_manager",
-        "$BUILD_DIR/mongo/db/server_options_servers",
-        "$BUILD_DIR/mongo/util/cmdline_utils/cmdline_utils",
-        "$BUILD_DIR/mongo/util/net/ssl_options_server",
-        "fips_mode_server",
-    ],
+    source=[],
+    LIBDEPS=[],
 )
