--- a/src/mongo/db/modules/enterprise/src/encryptdb/SConscript
+++ b/src/mongo/db/modules/enterprise/src/encryptdb/SConscript
@@ -48,8 +48,8 @@ env.Program(
         "$BUILD_DIR/mongo/util/options_parser/options_parser_init",
         "$BUILD_DIR/mongo/util/signal_handlers",
         "$BUILD_DIR/mongo/util/version_impl",
-        "../../kmip",
-        "../../symmetric_crypto_enterprise",
+        "../encryptdb/symmetric_crypto_enterprise",
+        "../kmip/kmip",
         "key_acquisition",
     ],
 )
