--- a/src/mongo/db/modules/enterprise/src/fips/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/fips/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library")
+load("//bazel:mongo_src_rules.bzl", "idl_generator", "mongo_cc_library", "mongo_cc_unit_test")
 
 package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])
 
@@ -66,5 +66,21 @@ mongo_cc_library(
         "//src/mongo/db/auth:cluster_auth_mode",
         "//src/mongo/util/net:ssl_options_server",
         "//src/mongo/util/options_parser",
+    ],
+)
+
+mongo_cc_unit_test(
+    name = "fips_options_test",
+    srcs = [
+        "fips_options_test.cpp",
+        "//src/mongo/util/cmdline_utils:censor_cmdline_test.h",
+    ],
+    tags = ["mongo_unittest_third_group"],
+    deps = [
+        ":fips_mode_server",
+        "//src/mongo/db:server_options_servers",
+        "//src/mongo/db/concurrency:lock_manager",
+        "//src/mongo/util/cmdline_utils",
+        "//src/mongo/util/net:ssl_options_server",
     ],
 )
