SERVER-96581: Rename externalAPI operator, connection type, and fields (#28933)

--- a/src/mongo/db/modules/enterprise/src/streams/exec/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/streams/exec/BUILD.bazel
@@ -158,19 +158,19 @@ mongo_cc_library(
         "context.cpp",
         "dead_letter_queue.cpp",
         "delayed_watermark_generator.cpp",
-        "document_source_external_api_stub.cpp",
         "document_source_feeder.cpp",
+        "document_source_https_stub.cpp",
         "document_source_remote_db_cursor.cpp",
         "document_source_validate_stub.cpp",
         "document_source_window_stub.cpp",
         "documents_data_source_operator.cpp",
         "executor.cpp",
-        "external_api_operator.cpp",
         "fake_kafka_partition_consumer.cpp",
         "feature_flag.cpp",
         "generated_data_source_operator.cpp",
         "group_operator.cpp",
         "group_processor.cpp",
+        "https_operator.cpp",
         "in_memory_dead_letter_queue.cpp",
         "in_memory_sink_operator.cpp",
         "in_memory_source_operator.cpp",
@@ -239,20 +239,20 @@ mongo_cc_library(
         "context.h",
         "dead_letter_queue.h",
         "delayed_watermark_generator.h",
-        "document_source_external_api_stub.h",
         "document_source_feeder.h",
+        "document_source_https_stub.h",
         "document_source_remote_db_cursor.h",
         "document_source_validate_stub.h",
         "document_source_window_stub.h",
         "documents_data_source_operator.h",
         "executor.h",
-        "external_api_operator.h",
         "fake_kafka_partition_consumer.h",
         "feature_flag.h",
         "feedable_pipeline.h",
         "generated_data_source_operator.h",
         "group_operator.h",
         "group_processor.h",
+        "https_operator.h",
         "in_memory_dead_letter_queue.h",
         "in_memory_sink_operator.h",
         "in_memory_source_operator.h",
