SERVER-97439: Improve  _stream_meta responseTimeMs test coverage (#29476)
## Description

This PR contains change that increase test coverage surrounding the
stream meta `responseTimeMs` field for the $https operator.

--- a/src/mongo/db/modules/enterprise/src/streams/exec/tests/SConscript
+++ b/src/mongo/db/modules/enterprise/src/streams/exec/tests/SConscript
@@ -11,6 +11,7 @@ env.Library(
         "in_memory_checkpoint_storage.cpp",
     ],
     LIBDEPS=[
+        "$BUILD_DIR/mongo/util/net/mock_http_client",
         "../streams_operators",
     ],
     LIBDEPS_PRIVATE=[
