SERVER-94178 Save oldest window's prior checkpoint offsets in checkpoint data (#27770)
This PR includes the changes to store data in the checkpoint needed to
support edit stream processor with a windowed pipeline.
Reference - [Technical Design: Edit Stream
Processors](https://docs.google.com/document/d/18gnxFtGt5WRFLckppuHiQ1OaHJNSW5Wywsa0JpSjJcg/edit#heading=h.1sf01n5a72ed).

This PR 
- added 2 new fields in the checkpoint metadata - prior checkpoint
source state and the min window start time.
- As part of processing the checkpoint control message, both the sources
updates the $source state in the checkpoint storage - last created
checkpoint's source state
- Window aware operator, every time a new window is opened, stores the
prior checkpoint id and sends a message to store the last created
checkpoint's source state. On close, it removes the source state from
the checkpoint storage
- Window aware operator also passes the minWindowStartTime to the
checkpoint storage, as part of a new checkpoint. The checkpoint storage
stores the minWindowStartTime in the metadata

---------

Co-authored-by: mongodb-matthew-normyle <120420718+mongodb-matthew-normyle@users.noreply.github.com>
Co-authored-by: Matthew Normyle <matthew.normyle@mongodb.com>

--- a/src/mongo/db/modules/enterprise/src/streams/exec/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/streams/exec/BUILD.bazel
@@ -224,10 +224,11 @@ mongo_cc_library(
         "watermark_generator.cpp",
         "window_assigner.cpp",
         "window_aware_operator.cpp",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:checkpoint_restorer.cpp",
         "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:file_util.cpp",
         "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:local_disk_checkpoint_storage.cpp",
         "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:manifest_builder.cpp",
-        "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:restorer.cpp",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:replay_checkpoint_restorer.cpp",
     ],
     hdrs = [
         "add_fields_operator.h",
@@ -314,9 +315,11 @@ mongo_cc_library(
         "window_aware_operator.h",
         "//src/mongo/db:change_stream_options_gen",
         "//src/mongo/db/modules/enterprise/src/streams/commands:stream_ops_gen",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:checkpoint_restorer.h",
         "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:file_util.h",
         "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:local_disk_checkpoint_storage.h",
         "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:manifest_builder.h",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:replay_checkpoint_restorer.h",
         "//src/mongo/db/modules/enterprise/src/streams/exec/checkpoint:restorer.h",
         "//src/mongo/db/pipeline:aggregation_context_fixture.h",
         "//src/mongo/db/pipeline:document_source_mock.h",
