--- a/src/mongo/db/modules/enterprise/src/audit/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/audit/BUILD.bazel
@@ -93,6 +93,7 @@ mongo_cc_library(
 mongo_cc_library(
     name = "audit_enterprise",
     srcs = [
+        "audit_client_attrs.cpp",
         "audit_command.cpp",
         "audit_commands_gen",
         "audit_event_type_gen",
@@ -135,6 +136,7 @@ mongo_cc_library(
         "//src/mongo/db/modules/enterprise/src/audit/ocsf:ocsf_audit_events_gen",
     ],
     hdrs = [
+        "audit_client_attrs.h",
         "audit_deduplication.h",
         "audit_event_type.h",
         "audit_frame.h",
@@ -273,6 +275,7 @@ mongo_cc_library(
 mongo_cc_unit_test(
     name = "audit_test",
     srcs = [
+        "audit_client_attrs_test.cpp",
         "audit_enc_comp_manager_test.cpp",
         "audit_file_header_test.cpp",
         "audit_key_manager_test.cpp",
@@ -293,6 +296,7 @@ mongo_cc_unit_test(
         "//src/mongo/db:service_context_d_test_fixture",
         "//src/mongo/db:service_context_test_fixture",
         "//src/mongo/db/auth:authmocks",
+        "//src/mongo/db/auth:authorization_session_test_fixture",
         "//src/mongo/db/auth:authprivilege",
         "//src/mongo/db/catalog:catalog_helpers",
         "//src/mongo/db/commands:create_command",
