SERVER-97932 Convert QE unit tests from SCons to Bazel (#29938)
Converts the following libraries:
* async_command_execution_test
* commands_test_example
* dbcheck_test_fixture
* fle_mocks
* oplog_interface_mock
* query_planner_test_fixture
* query_planner_test_lib
* sessions_collection_mock

Converts the following unit tests:
* change_collection_test
* command_mirroring_test
* command_test
* db_base_test
* db_commands_test
* default_baton_test
* express_execution_test
* mongod_options_test
* query_test
* session_test

--- a/src/mongo/db/modules/enterprise/src/streams/exec/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/streams/exec/BUILD.bazel
@@ -324,7 +324,6 @@ mongo_cc_library(
         "//src/mongo/db/pipeline:aggregation_context_fixture.h",
         "//src/mongo/db/pipeline:document_source_mock.h",
         "//src/mongo/db/pipeline:document_source_mock_stages.h",
-        "//src/mongo/db/pipeline:expression_context_for_test.h",
         "//src/mongo/db/query:query_test_service_context.h",
     ],
     copts = MONGOCXX_COPTS,
@@ -339,6 +338,7 @@ mongo_cc_library(
         "//src/mongo/db:server_base",
         "//src/mongo/db/modules/enterprise/src/streams/third_party/mongocxx",
         "//src/mongo/db/modules/enterprise/src/streams/util:streams_util",
+        "//src/mongo/db/pipeline:expression_context_for_test",
         "//src/mongo/db/pipeline/process_interface:common_process_interface",
         "//src/third_party/librdkafka:rdkafka",
         "//src/third_party/librdkafka:rdkafka++",
