--- a/src/mongo/db/modules/enterprise/src/streams/management/tests/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/streams/management/tests/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//bazel:mongo_src_rules.bzl", "mongo_cc_library")
+load("//bazel:mongo_src_rules.bzl", "mongo_cc_binary", "mongo_cc_library", "mongo_cc_unit_test")
 
 package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])
 
@@ -7,4 +7,74 @@ exports_files(
         "*.h",
         "*.cpp",
     ]),
+)
+
+SASL_SYSDEP = select({
+    "@platforms//os:windows": [
+        "sasl2.lib",
+    ],
+    "//conditions:default": [
+        "-lsasl2",
+    ],
+})
+
+# TODO: add something like InjectStreamsThirdParty('mongocxx') to make this easier.
+MONGOCXX_COPTS = [
+    "-isystemsrc/mongo/db/modules/enterprise/src/streams/third_party/mongocxx/dist",
+] + select({
+    "@platforms//cpu:x86_64": [
+        "-isystemsrc/mongo/db/modules/enterprise/src/streams/third_party/mongocxx/dist/platform/linux_x86_64",
+    ],
+    "@platforms//cpu:aarch64": [
+        "-isystemsrc/mongo/db/modules/enterprise/src/streams/third_party/mongocxx/dist/platform/linux_aarch64",
+    ],
+    "//conditions:default": [],
+})
+
+mongo_cc_unit_test(
+    name = "stream_manager_test",
+    srcs = [
+        "stream_manager_test.cpp",
+    ],
+    copts = MONGOCXX_COPTS,
+    tags = ["mongo_unittest_third_group"],
+    deps = [
+        "//src/mongo:base",
+        "//src/mongo/db:service_context",
+        "//src/mongo/db:service_context_d_test_fixture",
+        "//src/mongo/db:service_context_test_fixture",
+        "//src/mongo/db/auth:authmocks",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/tests:streams_test_utils",
+        "//src/mongo/db/modules/enterprise/src/streams/management:streams_management",
+        "//src/mongo/db/query:query_test_service_context",
+        "//src/mongo/executor:thread_pool_task_executor_test_fixture",
+    ],
+)
+
+mongo_cc_unit_test(
+    name = "container_stats_utils_test",
+    srcs = [
+        "container_stats_utils_test.cpp",
+    ],
+    copts = MONGOCXX_COPTS,
+    tags = ["mongo_unittest_third_group"],
+    deps = [
+        "//src/mongo:base",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/tests:streams_test_utils",
+        "//src/mongo/db/modules/enterprise/src/streams/management:streams_management",
+    ],
+)
+
+mongo_cc_unit_test(
+    name = "container_stats_test",
+    srcs = [
+        "container_stats_test.cpp",
+    ],
+    copts = MONGOCXX_COPTS,
+    tags = ["mongo_unittest_third_group"],
+    deps = [
+        "//src/mongo:base",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/tests:streams_test_utils",
+        "//src/mongo/db/modules/enterprise/src/streams/management:streams_management",
+    ],
 )
