--- a/src/mongo/db/modules/enterprise/src/streams/tools/BUILD.bazel
+++ b/src/mongo/db/modules/enterprise/src/streams/tools/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//bazel:mongo_src_rules.bzl", "mongo_cc_library")
+load("//bazel:mongo_src_rules.bzl", "mongo_cc_binary", "mongo_cc_library", "mongo_cc_unit_test")
 
 package(default_visibility = ["//src/mongo/db/modules/enterprise:__subpackages__"])
 
@@ -7,4 +7,60 @@ exports_files(
         "*.h",
         "*.cpp",
     ]),
+)
+
+SASL_SYSDEP = select({
+    "@platforms//os:windows": [
+        "sasl2.lib",
+    ],
+    "//conditions:default": [
+        "-lsasl2",
+    ],
+})
+
+# TODO: add something like InjectStreamsThirdParty('mongocxx') to make this easier.
+MONGOCXX_COPTS = [
+    "-isystemsrc/mongo/db/modules/enterprise/src/streams/third_party/mongocxx/dist",
+] + select({
+    "@platforms//cpu:x86_64": [
+        "-isystemsrc/mongo/db/modules/enterprise/src/streams/third_party/mongocxx/dist/platform/linux_x86_64",
+    ],
+    "@platforms//cpu:aarch64": [
+        "-isystemsrc/mongo/db/modules/enterprise/src/streams/third_party/mongocxx/dist/platform/linux_aarch64",
+    ],
+    "//conditions:default": [],
+})
+
+mongo_cc_binary(
+    name = "streams_pipeline_runner_main",
+    srcs = [
+        "pipeline_runner_main.cpp",
+    ],
+    copts = MONGOCXX_COPTS,
+    linkopts = SASL_SYSDEP,
+    deps = [
+        "//src/mongo:base",
+        "//src/mongo/db:service_context_non_d",
+        "//src/mongo/db:service_context_test_fixture",
+        "//src/mongo/db/auth:authmocks",
+        "//src/mongo/db/modules/enterprise/src/streams/exec:streams_operators",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/tests:streams_test_utils",
+        "//src/mongo/db/query:query_test_service_context",
+    ],
+)
+
+mongo_cc_binary(
+    name = "streams_merge_operator_main",
+    srcs = [
+        "merge_operator_main.cpp",
+    ],
+    copts = MONGOCXX_COPTS,
+    linkopts = SASL_SYSDEP,
+    deps = [
+        "//src/mongo:base",
+        "//src/mongo/db/auth:authmocks",
+        "//src/mongo/db/modules/enterprise/src/streams/exec:streams_operators",
+        "//src/mongo/db/modules/enterprise/src/streams/exec/tests:streams_test_utils",
+        "//src/mongo/db/query:query_test_service_context",
+    ],
 )
